# moscow_toponyms

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
data/: black_list.json
moscow_toponyms/: __init__.py  __main__.py  toponyms.py
