[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "moscow_toponyms"
authors = [{name = "Diana Esaian", email = "diana.esaian@gmail.com"}]
readme = "README.rst"
description = "Moscow toponyms extractor for Russian texts"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",     "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3",
    "Natural Language :: Russian",
    "Topic :: Text Processing"
]
requires-python = ">=3.5"
dependencies = [
    "csv",
    "spacy >= 3.5.0",
    "natasha >= 1.5.0",
    "pymorphy2 >= 0.9.1",
    "pymorphy2-dicts >= 2.4.393442.3710985",
    "pandas >= 1.5.3"
]

[project.optional-dependencies]
test = [
    "pytest",
    "mypy",
    "flake8",
]

[project.urls]
Source = "https://github.com/diana-esaian/russiantoponyms"

[project.scripts]
moscow_toponyms = "moscow_toponyms.__main__:main"